[project]
name = "mgz-control-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyinstaller>=6.18.0",
    "requests>=2.32.5",
    "ruff>=0.15.0",
]
